# genje-api

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.fetcher  Makefile  README.md  composer.json  config.toml  docker-compose.yml  flake.nix  go.mod  go.sum  init.sql  nginx.conf  package-lock.json  package.json  tmp_google.html
.github/workflows/: go.yml
app/Jobs/: BackfillArticleImageJob.php  CacheArticleImageJob.php
app/Mail/: DailyDigestMail.php
app/Models/: News.php  User.php
app/Services/: NewsScraperInterface.php  NewsScraperManager.php  RecommendationService.php  RssFeedService.php
cmd/server/: main.go
database/migrations/: 2025_10_28_221228_create_news_table.php  2025_11_10_090628_add_fulltext_and_views_to_news_table.php  2025_11_10_090629_create_news_tag_table.php  2025_11_10_090629_create_news_views_table.php  2025_11_10_090937_add_fingerprint_quality_cached_image_to_news_table.php  2025_11_10_093741_create_favorites_table.php  2025_11_10_100412_add_preferences_to_users_table.php  2025_11_10_101034_create_reading_history_table.php
database/seeders/: NewsSeeder.php
docs/: CONFIGURATION.md  ENGAGEMENT_API.md
internal/config/: config.go  config_test.go
internal/database/: database.go  database_test.go  postgres.go
internal/docs/: openapi.go
internal/handlers/: analytics_handler.go  election_handler.go  engagement.go  geography_handler.go  handlers.go  handlers_test.go  health_handler.go  helpers.go  (+5 more)
migrations/: 20241101000001_initial.sql
routes/: api.php  console.php  web.php
src/: api.rs  lib.rs  main.rs
(+107 files in other folders)
